--- a/client/src/normalize.css
+++ b/client/src/normalize.css
@@ -64,7 +64,7 @@
    */
   
   pre {
-    font-family: monospace, monospace; /* 1 */
+    font-family: monospace; /* 1 */
     font-size: 1em; /* 2 */
   }
   
@@ -108,7 +108,7 @@
   code,
   kbd,
   samp {
-    font-family: monospace, monospace; /* 1 */
+    font-family: monospace; /* 1 */
     font-size: 1em; /* 2 */
   }
   
