--- a/client/src/views/publicar/publicar.css
+++ b/client/src/views/publicar/publicar.css
@@ -51,7 +51,7 @@ label {
   display: inline-block;
   width: 230px;
   cursor: pointer;
-  padding: 0px 10px;
+  padding: 0 10px;
   height: 28px;
   outline: 0;
   border: 0;
