--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -2,7 +2,7 @@
   flex: 3.8;
   margin: 20px;
   padding-bottom: 30px;
-  background-color: #fff8f6;
+  background-color: #fbecef;  ;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,7 @@
   margin-top: 15px;
 }
 .sidebarContainer-txt p {
-  padding: 26px;
+  margin: 12px 10px 12px 19px;
   text-align: left;
   font-size: 13px;
   letter-spacing: 1px;
