--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,6 +3,6 @@
     height: 49px;
     line-height: 49px;
     text-align: center;
-    background-color: #eee;
+    background-color: #fbecef;
     color: #333;
 }
