--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -1,7 +1,7 @@
 .post {
   width: 352px;
   height: 500px;
-  margin: 10px 25px 0 25px;
+  margin: 10px 25px 0;
   background-color: #fbecef;
 }
 .postImg {
