--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -2,7 +2,7 @@
   flex: 3.8;
   margin: 20px;
   padding-bottom: 30px;
-  background-color: #fbecef;  ;
+  background-color: #fbecef;  
   border-radius: 10px;
   display: flex;
   flex-direction: column;
