--- a/client/src/views/publicar/publicar.css
+++ b/client/src/views/publicar/publicar.css
@@ -91,10 +91,10 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
 }
 
 .writeInput {
+  width: 782px;
   font-size: 30px;
   border: none;
   padding: 15px 18px;
-  width: 50vw;
   border-bottom: 1px solid #ccc;
 }
 .writeInput:focus {
@@ -102,10 +102,11 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
 }
 .writeText {
   font-size: 20px;
-  height: 33vh;
+  height: 21vh;
   margin-left: 27px;
   text-align: justify;
   outline: none;
+  margin-bottom: 50px;
 }
 .writeText::placeholder {
   font-size: 20px;
@@ -121,6 +122,15 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
   cursor: pointer;
   font-size: 16px;
   color: #fff;
+}
+.registerErrorPublish {
+  display: block;
+  position: absolute;
+  top: 284px;
+  left:671px;
+  width: 95%;
+  font-size: 12px;
+  color: #111;
 }
 
 /*Media Queris*/
@@ -139,3 +149,4 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
     height: 58vh;
   }
 }
+
