--- a/client/src/views/publicar/publicar.css
+++ b/client/src/views/publicar/publicar.css
@@ -1,10 +1,10 @@
 .write {
   padding-top: 30px;
   font-family: "ABeeZee", sans-serif;
+  text-align: center;
 }
 .writeImg {
-  margin-left: 197px;
-  width: 70vw;
+  width: 36vw;
   height: 250px;
   border-radius: 10px;
   object-fit: cover;
@@ -100,6 +100,7 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
 .writeInputArea {
   width: 816px;
   height: 144px;
+  border: none;
 }
 .writeInput:focus {
   outline: none;
@@ -110,6 +111,7 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
   text-align: justify;
   outline: none;
   margin-bottom: 50px;
+  border: none;
 }
 .writeText::placeholder {
   font-size: 20px;
@@ -130,7 +132,7 @@ dos bordes con color y que giramos con transform: rotate(-45deg);
   display: block;
   position: absolute;
   top: 284px;
-  left:671px;
+  left:495px;
   width: 95%;
   font-size: 12px;
   color: #111;
